@@ -21,6 +21,8 @@
 EntityFinder ist ein Programm, mit dem man Entitäten und deren NBT-Daten von einer Minecraft-Welt finden kann. Dies ist nützlich, wenn bspw. zu viele Entitäten gespawnt wurden und die Welt nicht mehr lädt, denn das Programm kann außerdem auch Entitäten entfernen.
 ### Anwendung
 Einfach die Jar-Datei in den Welt-Ordner downloaden. Dann im Welt-Ordner ein Terminal öffnen; unter Windows geht das ganz einfach, indem man auf den Pfad klickt und `cmd` reinschreibt. In die jetzt geöffnete Konsole schreibt man den Befehl `java -jar EntityFinder.jar`. Man kann die Sprache des Programms mit einem Argument auswählen, zum Beispiel: `java -jar EntityFinder.jar de`. Verfügbare Sprachen sind Deutsch (de, ger, german) und Englisch (en, english). Ab der Eingabe des Befehls leitet das Programm einen durch den weiteren Ablauf.
+#### OutOfMemoryError
+Wenn ein OutOfMemoryError kommt oder die Prozentanzeige nicht mehr wächst, hat das Programm möglicherweise zu wenig Ram. Dann einfach diese Argumente zum Befehl hinzufügen: `java -Xmx4G -XX:+UseConcMarkSweepGC -jar EntityFinder.jar`. Hier hätte das Programm dann 4GB zu Verfügung.
 ### NBT-Eingabe
 Das NBT-Format ist wie in Minecraft das JSON-Format. Aber beim Eintragen der NBT-Daten bitte nicht wie in Minecraft Buchstaben hinten an Zahlen schreiben (wie bspw. `1b`), sondern in diesem Fall nur `1` oder `true`. Es kann auch nur die ID der Entität angegeben werden.
 #### Beispiele
@@ -42,6 +44,8 @@ Java 8 oder höher. [Java-Download](https://java.com/de/)
 EntityFinder is a program to find entities and their NBT data from a Minecraft world. This is useful if, for example, too many entities have been spawned and the world no longer loads. The program can also remove entities.
 ### Usage
 Just download the jar file into the world folder. Then open a terminal in the world folder; in Windows this can be done very easy by clicking on the path and typing `cmd` into it. After that write the command `java -jar EntityFinder.jar` into the console. You can select the language of the program with an argument, for example: `java -jar EntityFinder.jar en`. Available languages are German (de, ger, german) and English (en, english). After entering the command, the program guides you through the rest of the process.
+#### OutOfMemoryError
+Wenn ein OutOfMemoryError kommt oder die Prozentanzeige nicht mehr wächst, hat das Programm möglicherweise zu wenig Ram. Dann einfach diese Argumente zum Befehl hinzufügen: `java -Xmx4G -XX:+UseConcMarkSweepGC -jar EntityFinder.jar`. Hier hätte das Programm dann 4GB zu Verfügung.
 ### NBT Input
 The NBT format is like in Minecraft the JSON format. But when entering the NBT data please do not append letters behind numbers (like `1b`) as you would do in Minecraft. In this case just write `1` or `true`. You can also just enter the entity id.
 #### Beispiele
